--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,300&family=Noto+Serif:wght@300;600&family=Rubik:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,300&family=Noto+Serif:wght@300;600;700&family=Rubik:wght@700&display=swap");
 
 * {
   margin: 0;
@@ -57,9 +57,9 @@ main {
 
 h2 {
   font-family: "Noto Serif", serif;
-  font-weight: 600;
+  font-weight: 700;
   color: #7a4f8c;
-  font-size: 28px;
+  font-size: 30px;
 }
 
 .edu {
@@ -77,6 +77,12 @@ h2 {
 
 .section-right {
   float: right;
+  margin-right: 10px;
+}
+
+.project {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 footer {
